# zejtron

./: .codespellrc  .gitignore  BRANDING.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  RULES.md  TRADEMARK.md  build.rs  check.sh  version-to.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: aur.yml  auto-update.yml  ci.yml  docs-ci.yml  maintenance.yml  release.yml
aur/nestkit-bin/: .SRCINFO  PKGBUILD
aur/zejtron-bin/: .SRCINFO  PKGBUILD
docs/: ROADMAP.md  v5.md
scripts/: build.sh  install.sh  uninstall.sh  version-to.sh
src/: cli.rs  doctor.rs  env.rs  git.rs  holds.rs  main.rs  net.rs  path.rs  port.rs  proc.rs  recent.rs  service.rs  shell.rs  touch.rs  update.rs  version.rs  why.rs
src/port/: mod.rs  model.rs  owners.rs  parser.rs  render.rs
workflow/: about-ci.md
