[package]
name = "zejtron"
version = "2.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/oxyzenQ/zejtron"
authors = ["rezky_nightky"]
description = "A Linux terminal toolkit for tracing paths, ports, env, holders, file changes, services, and process trees."

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.40", features = ["derive"] }
ctrlc = "3.4.7"

[dev-dependencies]
tempfile = "3.20.0"
