[package]
name = "zejtron"
version = "5.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/oxyzenQ/zejtron"
authors = ["rezky_nightky (oxyzenQ)"]
description = "Unified Linux introspection toolkit for paths, ports, processes, files, services, and diagnostics"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.40", features = ["derive"] }
ctrlc = "3.4.7"

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"
